# Satya_AI

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITOR_MATRIX.md  CONTRIBUTING.md  PRD.md  PR_REPORT.md  README.md  README_UPDATER.py  REPO_ANALYTICS.md  ROADMAP.md  SECURITY.md  agent_runner.py  app.py  file:memdb1  generate_analytics.py  migrate_statuses.py  orchestrator_runner.py  otel-traces.json  patch.diff  patch_readme.py  patch_readme2.py  project_manager.py  pyproject.toml  repo_analytics.json  run_analytics.py  run_self_test.py  run_sim.py  satya_release_blog.md  start_app.py  test_audit.db  test_ui.py  update_readme.py  update_readme_analytics.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
satya-ai/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
satya-ai/alembic/: env.py
satya-ai/alembic/versions/: fd01f1cb4ff7_initial_migration.py
satya-ai/examples/: basic_policy.py  openai_proxy.py
satya-ai/satya/: __init__.py  config.py  database.py  main.py
satya-ai/satya/core/: __init__.py  agent_registry.py  audit_logger.py  interceptor.py  policy_engine.py
satya-ai/satya/models/: __init__.py  agent.py  audit_event.py  policy.py  violation.py
satya-ai/satya/routers/: __init__.py  agents.py  audit.py  evaluate.py  policies.py
satya-ai/satya/schemas/: __init__.py  agent.py  audit.py  evaluate.py  policy.py
satya-ai/satya/utils/: hashing.py  pagination.py
satya-ai/tests/: conftest.py  test_agent_registry.py  test_audit_logger.py  test_evaluate_endpoint.py  test_policy_engine.py
(+83 files in other folders)
