[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satya-ai"
version = "0.1.0"
description = "Agentic governance framework built by AnkTechSol."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["satya"]
